<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LoginScreen!</string>
    <string name="app_name">Healthy Baby</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="StringCm">cm</string>
    <string name="StringWeight_in_lbs">enter weight</string>
    <string name="StringSubmit">Submit</string>
    <string name="StringSex:">Sex:</string>
    <string name="StringMale">Male</string>
    <string name="Stringlbs">lbs</string>
    <string name="StringHeightInCms">enter height</string>
    <string name="StringFemale">Female</string>
    <string name="StringEnterName">Enter name</string>
    <string name="StringDateOfBirth">Date of Birth:</string>
    <string name="StringHeight">Height: </string>
    <string name="StringName">Child Name: </string>
    <string name="StringWeight">Weight: </string>
    <string name="StringAddChild">Add Child</string>
    <string name="StringAddData">Add Data</string>
    <string name="Notification">Notifications</string>

</resources>